examples/test/testpolicy1132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1132
  namespace: namespace415
spec:
  podSelector:
    matchLabels:
      key38: value42
      key31: value15
      key29: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value7
          key3: value23
      podSelector:
        matchLabels:
          key25: value42
          key21: value8
